# nsynca

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  changelog.md  gui.py  main.py  pyproject.toml
.github/workflows/: code-quality.yaml  security.yaml
gui/: __init__.py  logs_viewer.py  main_window.py  results_display.py  update_logger.py  update_runner.py
gui/utils/: run_data_parser.py
src/client/: notion_client.py
src/databases/: deployments.py  services.py  tasks.py
src/services/: charge_updater.py  deployment_updater.py  orchestrator.py  service_updater.py  task_updater.py
src/services/base/: page_updater_base.py  project_updater_base.py
src/utils/: logging.py
